[gd_scene load_steps=5 format=3 uid="uid://c66ara07ywcql"]

[ext_resource type="Script" uid="uid://dku3q3tqxkgjt" path="res://Scripts/game.gd" id="1_feb5d"]
[ext_resource type="PackedScene" uid="uid://ndf6qgls4d25" path="res://Scenes/action_menu.tscn" id="2_feb5d"]
[ext_resource type="PackedScene" uid="uid://ceqjomb7xi0i5" path="res://Scenes/health_container.tscn" id="4_7jktm"]
[ext_resource type="PackedScene" uid="uid://dhkk5106hioql" path="res://Scenes/krabby.tscn" id="4_fc0e3"]

[node name="Game" type="Node2D"]
script = ExtResource("1_feb5d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ActionMenu" parent="CanvasLayer" instance=ExtResource("2_feb5d")]

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -11.5
offset_right = 39.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "YOU WON"

[node name="HealthContainer" parent="CanvasLayer" instance=ExtResource("4_7jktm")]
offset_top = 284.0
offset_bottom = 307.0

[node name="Krabby" parent="." instance=ExtResource("4_fc0e3")]

[node name="Label" type="Label" parent="."]
offset_left = 240.0
offset_top = -2.0
offset_right = 326.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 50
text = "100"

[node name="Label2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 136.0
offset_top = 104.0
offset_right = 457.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="change_label_text"]
